tmux: tune config

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+# https://raw.githubusercontent.com/tmux/tmux/refs/heads/master/CHANGES
+
 # Check for true color support using:
 # - `tmux info | grep -e RGB -e Tc`
 #   should return:
@@ -8,44 +10,57 @@
 # 1. Terminal & Colors
 # ============================================================================
 
-# Use "tmux-256color" if available, to enable more capabilities.
+# default-terminal: TERM used for new panes; tmux-256color enables italics, undercurl, etc.
 if-shell 'infocmp tmux-256color' 'set -g default-terminal "tmux-256color"' 'set -g default-terminal "screen-256color"'
 
-# Text styles
-set -sa terminal-overrides ',*:sitm=\E[3m'         # Enable italics
-set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
-set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+# terminal-overrides: fix terminfo entries so apps can use italics/undercurl in tmux
+# Use set -s (replace) to avoid duplicate accumulation on each source-file
+set -s terminal-overrides ',*:sitm=\E[3m,*:Smulx=\E[4::%p1%dm,*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-# Terminal features
-set -ga terminal-features ",*:RGB:focus:sync:hyperlinks"
+# terminal-features: enable true color (RGB), focus reporting, sync, hyperlinks
+set -g terminal-features ",*:RGB:focus:sync:hyperlinks"
 
 # ============================================================================
 # 2. Server Options (Protocol-level, all sessions)
 # ============================================================================
 
-set -s set-clipboard on         # OSC 52 clipboard support
-set -s allow-passthrough all    # Allow escape sequences (Kitty graphics, etc.)
-set -s extended-keys on         # Extended key sequences (Shift+Enter, etc.)
+# set-clipboard: OSC 52 clipboard sync (copy in tmux → system clipboard)
+set -s set-clipboard on
+# allow-passthrough: forward escape sequences to terminal (Kitty graphics, iTerm2 features, etc.)
+set -s allow-passthrough all
+# extended-keys: enable xterm-style extended key sequences (Shift+Enter, Ctrl+arrows, etc.)
+set -s extended-keys on
 
 # ============================================================================
 # 3. Session Options (Session-level defaults)
 # ============================================================================
 
+# mouse: disable mouse (scroll/select/resize) to avoid accidental clicks
 set -g mouse off
+# mode-keys: vi-style keys in copy-mode and command-prompt
 set -g mode-keys vi
+# focus-events: notify apps when pane gains/loses focus (e.g. vim airline)
 set -g focus-events on
+# history-limit: scrollback lines per pane (default 2000)
 set -g history-limit 102400
+# monitor-activity: show alert when output in another pane
 set -g monitor-activity on
+# repeat-time: window for repeat key (ms); enables prefix+C-n C-n C-n...
 set -g repeat-time 200
-set -g escape-time 2
+# escape-time: delay before prefix key is recognized (ms); 10 is tmux 3.4+ default
+set -g escape-time 10
+# display-time: how long status messages stay visible (ms)
 set -g display-time 3000
+# message-style: status line message fg/bg
 set -g message-style "bg=#3B4252,fg=#A3BE8C"
+# default-command: shell for new panes (unset = use default shell)
 # set -g default-command "${SHELL}"
 
 # ============================================================================
 # 4. Prefix & Key Bindings
 # ============================================================================
 
+# prefix: key to enter tmux command mode (default C-b, changed to C-f)
 unbind C-b
 set -g prefix C-f
 bind c-f send-prefix
@@ -90,6 +105,7 @@ bind -r C-p previous-window
 bind -r \\ select-window -l
 bind -r \[ swap-window -t -1\; select-window -t -1
 bind -r \] swap-window -t +1\; select-window -t +1
+# setw monitor-activity: per-window activity alert; C-m toggles for current window
 bind C-m setw monitor-activity
 
 # Pane split
@@ -119,27 +135,34 @@ bind -r > command-prompt -p "pane to:"    "move-pane -d -h -t '%%'"
 # Duplicate pane
 bind-key y run-shell '$XDG_CONFIG_HOME/tmux/scripts/_tmux_duplicate_pane.sh -h'
 
-# Broadcast to all panes in session
+# Broadcast to all panes in session (-l: single prompt, no split)
 unbind S
-bind S command-prompt -p "Command(all panes in session):" \
+bind S command-prompt -l -p "Command(all panes in session):" \
          "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
                 | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
 
 # Output selection
-source -q $XDG_CONFIG_HOME/tmux/output_selecter.tmux
+# source -q $XDG_CONFIG_HOME/tmux/output_selector.tmux
 
 # ============================================================================
 # 6. UI & Theme
 # ============================================================================
 
+# base-index: first window number (0 vs 1)
 set -g base-index 1
+# pane-base-index: first pane number in each window
 set -g pane-base-index 1
+# renumber-windows: keep window numbers sequential when one is closed
 set -g renumber-windows on
 
+# automatic-rename: rename window based on active pane
 set -g automatic-rename on
+# automatic-rename-format: use basename of current path as window name
 set -g automatic-rename-format '#{b:pane_current_path}'
 
+# set-titles: set terminal title (e.g. xterm title bar, iTerm tab)
 set -g set-titles on
+# set-titles-string: template for terminal title
 set -g set-titles-string '#{pane_title}'
 
 source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf
@@ -149,7 +172,9 @@ source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf
 # ============================================================================
 
 # fastcopy - https://github.com/abhinav/tmux-fastcopy
+# @fastcopy-action: command to run on copy; -w writes to system clipboard
 set-option -g @fastcopy-action 'tmux load-buffer -w -'
+# @fastcopy-regex-url: regex to match URLs for quick selection
 set-option -g @fastcopy-regex-url '\b[a-z]+://[[:alnum:]\.\-\_\/]+'
 bind-key f run-shell -b tmux-fastcopy
 
