--- a/xdg_config/tmux/nord.tmux.conf
+++ b/xdg_config/tmux/nord.tmux.conf
@@ -15,9 +15,9 @@ set -g status-right '#{?pane_synchronized,#[fg=#BF616A]*SYNC*#[default] ,}#{?SSH
 
 # Panes
 set -g pane-border-status bottom
-set -g pane-border-format " #{?pane_active,#[bold],}#{pane_index} #{pane_current_command}#{?pane_active,#[nobold],} "
-set -g pane-active-border-style "fg=#3B4252"
-set -g pane-border-style "fg=#2E3440"
+set -g pane-border-format " #{?pane_active,#[bold][#{pane_index}]#[nobold],#{pane_index}} #{pane_current_command} "
+set -g pane-active-border-style "fg=#4C566A"
+set -g pane-border-style "fg=#3B4252"
 
 # Windows
 setw -g window-status-format '#[fg=#81A1C1][#I] #W#{?window_activity_flag,!,}'
