--- a/xdg_config/tmux/nord.tmux.conf
+++ b/xdg_config/tmux/nord.tmux.conf
@@ -15,7 +15,7 @@ set -g status-right '#{?pane_synchronized,#[fg=#BF616A]*SYNC*#[default] ,}#{?SSH
 
 # Panes
 set -g pane-border-status bottom
-set -g pane-border-format " #{?pane_active,#[bold][#{pane_index}]#[nobold],#{pane_index}} #{pane_current_command} "
+set -g pane-border-format " #{?pane_active,#[bold](#{pane_index})#[nobold],#{pane_index}} #{pane_current_command} "
 set -g pane-active-border-style "fg=#4C566A"
 set -g pane-border-style "fg=#3B4252"
 
